--- a/gift_countdown/render.yaml
+++ b/gift_countdown/render.yaml
@@ -3,8 +3,9 @@ services:
     name: gift-countdown-app
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn gift_countdown.wsgi:application --bind 0.0.0.0:8000 --no-log-socket-errors"
-    pythonVersion: 3.9
+    startCommand: "gunicorn gift_countdown.wsgi:application --bind 0.0.0.0:8000"
+    pythonVersion: 3.9  
     disk:
+  
       mountPath: /var/lib/gift_countdown
       sizeGB: 1
