--- a/gift_countdown/render.yaml
+++ b/gift_countdown/render.yaml
@@ -3,7 +3,7 @@ services:
     name: gift-countdown-app
     env: python
     buildCommand: "pip install -r requirements.txt"
-    command: "python manage.py runserver 0.0.0.0:$PORT"
+    startCommand: "python3 manage.py runserver 0.0.0.0:$PORT"
     pythonVersion: 3.9
     disk:
       mountPath: /var/lib/gift_countdown
